--- a/wacode/package.json
+++ b/wacode/package.json
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^7.2.1",
     "cra-template": "1.0.2",
     "fusioncharts": "^3.15.0-sr.1",
+    "google-map-react": "^1.1.6",
+    "grommet": "^2.11.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-fusioncharts": "^3.1.2",
     "react-scripts": "3.4.0",
     "react-simple-maps": "^1.0.0-beta.0",
-    "recharts": "^2.0.0-beta.1"
+    "recharts": "^2.0.0-beta.1",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
